tests/paczka1/fuzzy1/65489824.err
Error in line 2: VJUI A232 71,4
Error in line 7: VJUI A232 114,87
Error in line 5: VJUI A232 89,6
Error in line 13: VJUI A635 80,3
Error in line 18: PKGs A232 82,8
Error in line 24: VJUI A232 67,3
Error in line 28: 4kRR A0 75,4
Error in line 21: 4CF A635 66,4
